template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachine_name": {
            "type": "string",
            "defaultValue": "arbitrum"
        },
        "adminUsername": {
            "type": "string",
            "defaultValue": "ubuntu"
        },
        "vmSize": {
            "type": "string",
            "defaultValue": "Standard_D4s_v4"
        },
        "adminPassword": {
            "type": "securestring"
        }
    },
    "variables": {
        "vnet-name": "[concat(parameters('virtualMachine_name'),'-vnet')]",
        "vnetInterfaces-name": "[concat(parameters('virtualMachine_name'),'-nic')]",
        "vnetPubilcIP-name": "[concat(parameters('virtualMachine_name'),'-external')]",
        "vnetSubnet-name": "[concat(parameters('virtualMachine_name'),'-internal')]",
        "vnetSecurityGroup-name": "[concat(parameters('virtualMachine_name'),'-nsg')]",
        //"StorageAccount-name": "[concat(parameters('virtualMachine_name'),'storage')]",
        "StorageAccount-name": "[concat(parameters('virtualMachine_name'),uniqueString(resourceGroup().id))]",
        "FileShare-name": "[concat(parameters('virtualMachine_name'),'fileshare')]",
        // "Datadisk-name": "[concat(parameters('virtualMachine_name'),'-datadisk1')]",
        "location": "[resourceGroup().location]"
    },
    "resources": [
        {
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[variables('StorageAccount-name')]",
            "apiVersion": "2021-04-01",
            "location": "[variables('location')]",
            "tags": {
                "displayName": "ubuntuVM1 Storage Account"
            },
            "sku": {
                "name": "Premium_LRS"
            },
            "kind": "FileStorage",
            "properties": {
                "largeFileSharesState": "Enabled"
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/fileServices/shares",
            "apiVersion": "2021-04-01",
            "name": "[format('{0}/default/{1}', variables('StorageAccount-name'), variables('FileShare-name'))]",
            "properties": {
                "enabledProtocols": "NFS",
                "rootSquash": "NoRootSquash",
                "shareQuota": 2048
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('StorageAccount-name'))]"
            ]
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('vnetPubilcIP-name')]",
            "apiVersion": "2020-11-01",
            "location": "[variables('location')]",
            "tags": {
                "displayName": "PublicIPAddress"
            },
            "properties": {
                //"publicIPAllocationMethod": "Dynamic",
                "publicIPAllocationMethod": "Static",
                "dnsSettings": {
                    "domainNameLabel": "[concat(toLower('ubuntuVM1'),uniqueString(resourceGroup().id))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('vnetSecurityGroup-name')]",
            "apiVersion": "2020-11-01",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "RPC",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8547",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "WebSocket",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8548",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "SequencerFeed",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9642",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 103,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('vnet-name')]",
            "apiVersion": "2020-11-01",
            "location": "[variables('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('vnetSecurityGroup-name'))]"
            ],
            "tags": {
                "displayName": "ubuntuVM1-VirtualNetwork"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('vnetSubnet-name')]",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('vnetSecurityGroup-name'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('vnetInterfaces-name')]",
            "apiVersion": "2020-11-01",
            "location": "[variables('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('vnetPubilcIP-name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet-name'))]"
            ],
            "tags": {
                "displayName": "ubuntuVM1-NetworkInterface"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('vnetPubilcIP-name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet-name'), variables('vnetSubnet-name'))]"
                            }
                        }
                    }
                ]
            }
        },
        // {
        //     "type": "Microsoft.Compute/disks",
        //     "apiVersion": "2022-03-02",
        //     "name": "[variables('Datadisk-name')]",
        //     "location": "[resourceGroup().location]",
        //     "sku": {
        //         "name": "Premium_LRS"
        //     },
        //     "properties": {
        //         "creationData": {
        //             "createOption": "Empty"
        //         },
        //         "diskSizeGB": 2048,
        //         "tier": "P40"
        //     }
        // },
        {
            "name": "[parameters('virtualMachine_name')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2021-03-01",
            "location": "[variables('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('vnetInterfaces-name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts/', variables('StorageAccount-name'))]"
            ],
            "tags": {
                "displayName": "ubuntuVM1"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vmSize')]"
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachine_name')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "18.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "ubuntuVM1-OSDisk",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                    // "dataDisks": [
                    //     {
                    //         "name": "[variables('Datadisk-name')]",
                    //         "lun": 0,
                    //         "createOption": "attach",
                    //         "managedDisk": {
                    //             "id": "[resourceId('Microsoft.Compute/disks/', variables('Datadisk-name'))]"
                    //         }
                    //     }
                    // ]
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('vnetInterfaces-name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', variables('StorageAccount-name'))).primaryEndpoints.blob]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('virtualMachine_name'),'/installDocker')]",
            "apiVersion": "2021-11-01",
            "location": "[variables('location')]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('virtualMachine_name'))]"
            ],
            "properties": {
                "publisher": "Microsoft.Azure.Extensions",
                "type": "CustomScript",
                "typeHandlerVersion": "2.1",
                "autoUpgradeMinorVersion": true,
                "settings": {
                },
                "protectedSettings": {
                    "commandToExecute": "sh install.sh",
                    "fileUris": ["https://raw.githubusercontent.com/zhengyiqun/AzureTemplateDemo/main/script/install.sh"]
                }
            }
        }
    ]
}
